# Lucy

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements.txt
lucy/: app.py  cli.py  config.py  context.py  logger.py  main.py
lucy/agent/: agent.py  hooks.py  interventions.py  tools.py  utils.py
lucy/agent/prompts/: system_prompt.py
lucy/agent/skills/system-operations/: SKILL.md
lucy/cli/: app.py  auth.py  context.py  dispatcher.py  doctor.py
lucy/session/: manager.py  models.py  repository.py  store.py
lucy/ui/: approvals.py  auth.py  banner.py  constants.py  core.py  doctor.py  prompt_bar.py  renderer.py  responses.py  theme.py  tools.py
tests/: test_main.py
tests/agent/: _helpers.py  conftest.py  test_agent.py  test_hooks.py  test_interventions.py  test_utils.py
tests/cli/: _helpers.py  conftest.py  test_app.py  test_auth.py  test_context.py  test_dispatcher.py  test_doctor.py
tests/session/: test_repository.py  test_store.py
tests/ui/: test_approvals.py  test_auth.py  test_doctor_ui.py  test_tools.py
