[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lucy-code"
version = "1.0.0"
description = "Terminal-native AI coding copilot"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "openai~=2.45",
    "strands-agents~=1.47",
    "strands-agents-tools~=0.8",
    "pyfiglet~=1.0",
    "keyring~=25.7",
    "colorama~=0.4",
    "rich~=14.3",
    "prompt-toolkit~=3.0",
    "platformdirs~=4.10",
]

[project.scripts]
lucy = "lucy.cli:main"

[tool.setuptools.packages.find]
include = ["lucy*"]

[tool.setuptools.package-data]
lucy = [
    "agent/prompts/*.md",
    "agent/skills/**",
]